--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,15 @@
 <!doctype html>
-<html lang="en-US">
+<html>
 	<head>
-		<title>My First MEOW!</title>
-	</head>	
-	<body style="background-color:powderblue;">
-	<img src="http://pngimg.com/uploads/cat/cat_PNG106.png" width="200" height="200">	
-		<a href=https://i.pinimg.com/236x/cb/fc/27/cbfc2762b05bc04b733365dc34d350af--kitty.jpg><h1>This Leads To More Cats</h1></a>
-		<p style="font-family:courier;">Click here for<br><h1 style="color:red" >ME-OW!</h1></p>
-		<p style="text-align:center;">im getting <del>lost</del> <sup><ins><strong>confused</strong></ins></sup> help.. </p>
+		<link rel="stylesheet" href="styles.css">
+		<title>Homepage</Title>
+	</head>
+	<style>
+	</Style>
+	<body>
+		<h1>Welcome to my simple site</h1>
+		<p>Here i talk about life</p>
+		<button class="button">Yes, im in.</button>
+		<button class="button disabled">No?</button>
 	</body>
 </html>
